--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,9 @@ body{
     width:100%;
     max-width: 700px;
     background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 5px 30px -15px rgba(0, 0, 0, 0.586);
 }
     
 .parent > div{
