--- a/styles.css
+++ b/styles.css
@@ -133,28 +133,28 @@ footer a{
 }
 
 @media screen and (max-width: 43.75em) {
-    .parent{
+    .container{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, .5fr);
         font-size: smaller;
         max-width: 300px;
     }
-    .parent h2{
+    .container h2{
         font-size: 17px;
     }
-    .parent > div{
+    .container > div{
         padding: 1.5em;
     }
-    .community{
+    .container__community{
         grid-area: 1 / 1 / 2 / 2;
     }
-    .community header h1{
+    .container__community header h1{
         font-size: 18px;
     }
-    .subscription{
+    .container__subscription{
         grid-area: 2 / 1 / 3 / 3;
     }
-    .about{
+    .container__about{
         grid-area: 3 / 1 / 3 / 4;
     }
 }
